# Document_validator

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SIMPLE.md  Dockerfile  README.md  ai_extractor.py  docker-compose.yml  main.py  models.py  pyproject.toml  test_comprehensive.py  validation.py
provided_assets/: test_doc_invalid_1.txt  test_doc_invalid_2.txt  test_doc_no_data.txt  test_doc_valid_1.txt  test_doc_valid_2.txt  test_doc_valid_3.txt
